WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127736
IDB: Cursor support - Messaging, IPC, Threading plumbing
https://bugs.webkit.org/show_bug.cgi?id=127736
Summary
IDB: Cursor support - Messaging, IPC, Threading plumbing
Brady Eidson
Reported
2014-01-27 17:19:54 PST
IDB: Cursor support - Messaging, IPC, Threading plumbing In radar as <
rdar://problem/15779645
>
Attachments
Patch v1
(33.68 KB, patch)
2014-01-27 17:52 PST
,
Brady Eidson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2014-01-27 17:52:36 PST
Created
attachment 222390
[details]
Patch v1
WebKit Commit Bot
Comment 2
2014-01-27 17:54:04 PST
Attachment 222390
[details]
did not pass style-queue: ERROR: Source/WebKit2/DatabaseProcess/IndexedDB/DatabaseProcessIDBConnection.h:87: The parameter name "key" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/DatabaseProcess/IndexedDB/UniqueIDBDatabase.cpp:563: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/DatabaseProcess/IndexedDB/UniqueIDBDatabase.cpp:584: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/DatabaseProcess/IndexedDB/UniqueIDBDatabase.cpp:605: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 4 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 3
2014-01-27 20:59:34 PST
http://trac.webkit.org/changeset/162911
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug